--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,66 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    const fullName = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.log(fullName);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    const sorted = inventors.sort((a,b) => a.year > b.year ? 1 : -1 );
+    console.table(sorted);
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const together = inventors.reduce((total, inventor) => {
+      const length = inventor.passed - inventor.year;
+      return total += length
+    }, 0);
+
+    console.log(together);
 
     // 5. Sort the inventors by years lived
+
+    const oldest = inventors.sort((a,b) => {
+      return (a.passed - a.year) > (b.passed - b.year) ? -1 : 1;
+    });
+
+    console.table(oldest);
+
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    // const boul = document.querySelector('.mw-category');
+    // const links = Array.from(boul.querySelectorAll('a'));
+    // const de = links
+    // .map(link => link.textContent)
+    // .filter(street => street.includes('de'));
+    // console.log(de);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const alpha = people.sort((lastGuy, nextGuy) => {
+      const [aLast, aFirst] = lastGuy.split(", ");
+      const [bLast, bFirst] = nextGuy.split(", ");
+      return aLast > bLast ? 1 : -1;
+    });
+    console.table(alpha)
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'tram', 'mazda', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const count = data.reduce((object, item) => {
+      if(!object[item]) {
+        object[item] = 0;
+      }
+      object[item] ++;
+        return object;
+      },{});
 
+    console.log(count);
   </script>
 </body>
 </html>
