--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,34 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const adult = people.some(person => ((new Date()).getFullYear()) - person.year >= 19);
+    console.log(adult);
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    const adultAll = people.every(person => ((new Date()).getFullYear()) - person.year >= 19);
+    console.log(adultAll);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id == 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const commentId = comments.findIndex(comment => comment.id == 823423);
+    console.log(commentId);
     // delete the comment with the ID of 823423
+    const newComments = [
+      ...comments.slice(0, commentId),
+      ...comments.slice(commentId +1)
+    ];
 
+
+    comments.splice(commentId, 1);
+    console.table(comments);
+    console.table(newComments);
   </script>
 </body>
 </html>
