implement checkbox functionality

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -96,6 +96,30 @@
   </div>
 
 <script>
+
+const checkboxes = document.querySelectorAll(".inbox input[type='checkbox']");
+
+let lastChecked;
+
+function handleChange(e) {
+  let inBetween = false;
+
+  if (e.shiftKey && this.checked) {
+    checkboxes.forEach(check => {
+      if (check === this || check === lastChecked) {
+        inBetween = !inBetween;
+        }
+      if (inBetween) {
+        check.checked = true;
+      }
+    })
+  }
+
+  lastChecked = this;
+}
+
+checkboxes.forEach(check => {check.addEventListener('click', handleChange)});
+
 </script>
 </body>
 </html>
