--- a/16 - Mouse Move Shadow/index-start.html
+++ b/16 - Mouse Move Shadow/index-start.html
@@ -35,6 +35,35 @@
   </style>
 
 <script>
+
+  const hero = document.querySelector('.hero');
+  const text = hero.querySelector('h1');
+  const walk = 100;
+
+  function shadow(e) {
+    const { offsetWidth: width, offsetHeight: height } = hero;
+    // const width = hero.offsetWidth
+    let { offsetX: x, offsetY: y } = e;
+    // where the mouse is
+
+    if (this !== e.target) {
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    }
+
+    const xWalk = Math.round((x / width * walk) - (walk / 2));
+    const yWalk = Math.round((y / height * walk) - (walk / 2));
+
+    text.style.textShadow = `
+      ${xWalk}px ${yWalk}px rgba(0, 0, 255, 0.7),
+      ${xWalk * -1}px ${yWalk}px rgba(0, 255, 255, 0.7),
+      ${yWalk}px ${xWalk * -1}px rgba(255, 0, 255, 0.7),
+      ${yWalk * -1}px ${xWalk}px  rgba(0, 255, 0, 0.7)
+    `;
+  }
+
+  hero.addEventListener('mousemove', shadow);
+
 </script>
 </body>
 </html>
