implement video speed controller

--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -15,6 +15,24 @@
   </div>
 
 <script>
+
+  const speed = document.querySelector('.speed');
+  const speedBar = document.querySelector('.speed-bar');
+  const video = document.querySelector('.flex');
+
+
+  speed.addEventListener('mousemove', function(e) {
+    const y = e.pageY - this.offsetTop;
+    const percentage =  y / this.offsetHeight;4;
+    const min = 0.4;
+    const max = 4;
+    const height = Math.round(percentage * 100) + '%';
+    const playbackRate = percentage * (max - min) + min;
+    speedBar.style.height = height;
+    speedBar.textContent = playbackRate.toFixed(2) + 'x';
+    video.playbackRate = playbackRate;
+
+  })
 </script>
 </body>
 </html>
